<resources>
    <string name="app_name">ControlDeGastos</string>
    <string name="titulo_principal">Inicio</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="label_menu_item1">Inicio</string>
    <string name="label_menu_item2">Cuentas</string>
    <string name="label_menu_item3">Categorias</string>
    <string name="label_menu_item4">Informe</string>
    <string name="label_menu_item5">Ajustes</string>
    <string name="title_informe">Informe</string>
    <string name="title_cuentas">Cuentas</string>


    <!-- STRINGS INFORME VIEW -->
    <string name="toggle_button_label1">Ingresos</string>
    <string name="toggle_button_label2">Gastos</string>
    <string name="default_label_periodo">Mensual</string>
    <string name="menu_informe_opcion_texto_1">Semanal</string>
    <string name="menu_informe_opcion_texto_2">Mensual</string>
    <string name="menu_informe_opcion_texto_3">Anual</string>
    <string name="menu_informe_opcion_texto_4">Periodo</string>
    <string name="titulo_informe_principal_gastos">Gastos Por Categorias</string>
    <string name="titulo_informe_principal_ingresos">Ingresos Por Categorias</string>
    <string name="titulo_informe_secundario_ingresos">Ingresos</string>
    <string name="titulo_informe_secundario_gastos">Gastos</string>
    <string name="total_informe">$1,234</string>

    <!-- STRINGS RESUME VIEW -->
    <string name="resume_title">Resumen</string>
    <string name="total_subtitle">Saldo total</string>
    <string name="total_amount">$1,234.56</string>
    <string name="expenses_section_title">Gastos Recientes</string>
    <string name="income_section_title">Ingresos Recientes</string>

    <!-- STRINGS ACCOUNT VIEW -->
    <string name="account_title">Cuentas</string>
    <string name="add_button">Añadir cuenta</string>

    <!-- STRINGS MANAGE ACCOUNT VIEW -->
    <string name="manege_title_1">Agregar cuenta</string>
    <string name="manage_title_2">Editar cuenta</string>
    <string name="account_name_label">Nombre de la cuenta</string>
    <string name="example_content_name">ej. Efectivo</string>
    <string name="account_balance_label">Balance Inicial</string>
    <string name="example_content_balance">$0.00</string>
    <string name="account_type_label">Tipo de cuenta</string>
    <string name="type_label_subtitle">Seleccione un tipo</string>
    <string name="save_button">Guardar cuenta</string>

    <!-- DELETE ACCOUNT DIALOG -->
    <string name="menu_appbar_item_1">Agregar</string>
    <string name="menu_appbar_item_2">Eliminar</string>
    <string name="menu_appbar_item_3">Mas</string>
    <string name="delete_account_dialog_message">Esta seguro que desea eliminar esta cuenta?</string>
    <string name="ok">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="total_amount_format">%1$,.0f</string>


    <!-- STRINGS SELECT TYPE MENU VIEW -->
    <string name="menu_tipo_cuenta_op_texto_1">Efectivo</string>
    <string name="menu_tipo_cuenta_op_texto_2">Tarjeta de Credito</string>
    <string name="menu_tipo_cuenta_op_texto_3">Tarjeta de Debito</string>
    <string name="menu_tipo_cuenta_op_texto_4">Caja de Ahorro</string>

    <!-- STRINGS SETTINGS VIEW -->
    <string name="settings_title">Ajustes</string>
    <string name="account_subtitle">Cuenta</string>
    <string name="preferences_subtitle">Preferencias</string>
    <string name="custom_subtitle">Personalizacion</string>
    <string name="op_account_details">Detalles de la cuenta</string>
    <string name="op_account_details_desc">Administra tus detalles de cuenta</string>
    <string name="op_account_susc">Suscripcion</string>
    <string name="op_account_susc_desc">Administra tus suscripciones</string>
    <string name="op_account_friends">Invitar amigos</string>
    <string name="op_account_friends_desc">Invita a amigos a unirse</string>
    <string name="op_prefs_app">Preferencias de la app</string>
    <string name="op_prefs_app_desc">Personaliza tu experiencia en la app</string>
    <string name="op_prefs_notif">Notificaciones</string>
    <string name="op_prefs_notif_desc">Administra las notificaciones</string>
    <string name="op_prefs_db">Gestion de datos</string>
    <string name="op_prefs_db_desc">Administra tus datos</string>
    <string name="op_custom_themes">Temas</string>
    <string name="op_custom_themes_desc">Personaliza tus temas en la app</string>
    <string name="op_custom_icons">Icono de la app</string>
    <string name="op_custom_icons_desc">Cambia tu icono de la app</string>

    <!-- STRINGS MANAGE ACCOUNT VIEW -->
    <string name="transaction_title">Nueva transaccion</string>
    <string name="amount_transaction_label">Monto</string>
    <string name="category_transaction_label">Seleccione la categoria</string>
    <string name="desc_transaction_label">Descripcion (opcional)</string>
    <string name="type_transaction_label">Seleccione el tipo de transaccion</string>
    <string name="origin_account_label">Seleccione la cuenta de origen</string>
    <string name="dest_account_label">Seleccione la cuenta de destino</string>
    <string name="save_transaction_button">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_input_hint">Seleccione una Fecha</string>
    <string name="time_input_hint">Selecione la Hora</string>

    <string-array name="transaction_type_array">
        <item>Gasto</item>
        <item>Ingreso</item>
        <item>Transferencia</item>
    </string-array>
</resources>