<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_1"
        android:enabled="true"
        android:icon="@drawable/home_24px"
        android:title="@string/label_menu_item1"/>

    <item android:id="@+id/item_2"
        android:enabled="true"
        android:icon="@drawable/add_box_24px"
        android:title="@string/label_menu_item2"/>

    <item android:id="@+id/item_3"
        android:enabled="true"
        android:icon="@drawable/list_24px"
        android:title="@string/label_menu_item3"/>

    <item android:id="@+id/item_4"
        android:enabled="true"
        android:icon="@drawable/insert_chart_24px"
        android:title="@string/label_menu_item4"/>

    <item android:id="@+id/item_5"
        android:enabled="true"
        android:icon="@drawable/settings_24px"
        android:title="@string/label_menu_item5"/>
</menu>