<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageAccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

<!--            <LinearLayout-->
<!--                android:id="@+id/linearLayout_header"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:gravity="center_vertical">-->

<!--                <ImageView-->
<!--                    android:id="@+id/close_icon"-->
<!--                    android:layout_width="24dp"-->
<!--                    android:layout_height="24dp"-->
<!--                    android:src="@drawable/close_24px"/>-->

<!--                <TextView-->
<!--                    android:id="@+id/tv_title_manage_account"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="@string/manege_title_1"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textColor="@color/black"/>-->
<!--            </LinearLayout>-->

            <TextView
                android:id="@+id/tv_account_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/account_name_label"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_content_name"
                android:padding="12dp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/tv_initial_balance_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/account_balance_label"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_initial_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_content_balance"
                android:padding="12dp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:inputType="numberDecimal"/>

            <TextView
                android:id="@+id/tv_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/account_type_label"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <LinearLayout
                android:id="@+id/layout_select_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_select_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type_label_subtitle"
                    android:textSize="14sp"/>

                <ImageView
                    android:id="@+id/select_type"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/add_box_24px" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save_button"
                android:textSize="16sp"
                app:cornerRadius="12dp"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>