<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_subtitle"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"/>

            <include layout="@layout/item_settings_details_account"/>
            <include layout="@layout/item_settings_suscription"/>
            <include layout="@layout/item_settings_invite_friends"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferences_subtitle"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"/>

            <include layout="@layout/item_settings_app_preferences"/>
            <include layout="@layout/item_settings_notifications"/>
            <include layout="@layout/item_settings_data_management"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_subtitle"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"/>

            <include layout="@layout/item_settings_themes"/>
            <include layout="@layout/item_settings_icon_app"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>